tests/ui/fail_empty_placeholder.stderr
error: invalid template literal
 --> tests/ui/fail_empty_placeholder.rs:3:12
  |
3 |     value: "Hello {}",
  |            ^^^^^^^^^^
