tests/ui/fail_empty_placeholder.rs
rusty18n::define_i18n_fallback! {
    FailEmptyPlaceholder => en
    value: "Hello {}",
}

fn main() {}
